# teiko_tech

./: .gitignore  Makefile  README.md  conda-lock.yml  logfile  main.ipynb  main.py  main.sh  postgres.sh  problem1.ipynb  problem2.ipynb  pyproject.toml  schema.sql  tech_screen_query.sql  ~$iko-technical-screen.docx
teiko_tools/: analysis.py  db_tools.py
teiko_tools/tests/: test_analysis.py
